deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-node-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-internal
  rules:
  - host: app.cto-delivery-01-noprd.aws.cld.cma-cgm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-node-app
            port:
              number: 80
